--- a/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Customers/Edit.cshtml
+++ b/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Customers/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2 class="my-2">Edit</h2>
 
 
 @using (Html.BeginForm())
@@ -35,7 +35,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default btn-outline-success my-3" />
             </div>
         </div>
     </div>
