--- a/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Cars/Create.cshtml
+++ b/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Cars/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2 class="my-2">Create</h2>
 
 
 @using (Html.BeginForm()) 
@@ -51,7 +51,7 @@
             @Html.LabelFor(model => model.Available, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
-                    @Html.EditorFor(model => model.Available)
+                    @Html.EditorFor(model => model.Available, new { htmlAttributes = new { @class = "form-select", @id = "exampleSelect1" } })
                     @Html.ValidationMessageFor(model => model.Available, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -59,7 +59,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-default btn-outline-success my-3" />
             </div>
         </div>
     </div>
