--- a/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Customers/Delete.cshtml
+++ b/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Customers/Delete.cshtml
@@ -4,36 +4,40 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2 class="my-2">Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Customer</h4>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+    <div class="card bg-light mb-3" style="max-width: 23rem;">
+        <div class="card-header">Are you sure you want to delete this customer?</div>
+        <div class="card-body">
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Name)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Name)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.DriverLicNo)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.DriverLicNo)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.DriverLicNo)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.DriverLicNo)
+                </dd>
+            </dl>
+        </div>
+    </div>
 
-    </dl>
-
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Delete" class="btn btn-default btn-outline-success" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
