--- a/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Customers/Details.cshtml
+++ b/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Customers/Details.cshtml
@@ -4,29 +4,34 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2 class="my-2">Details</h2>
 
 <div>
     <h4>Customer</h4>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+    <div class="card bg-light mb-3" style="max-width: 20rem;">
+        <div class="card-header">Details about the customer</div>
+        <div class="card-body">
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Name)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Name)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.DriverLicNo)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.DriverLicNo)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.DriverLicNo)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.DriverLicNo)
+                </dd>
+            </dl>
+        </div>
+    </div>
 
-    </dl>
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.CustomerId }) |
