--- a/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Rentals/Details.cshtml
+++ b/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Rentals/Details.cshtml
@@ -44,7 +44,7 @@
 
         </dl>*@
     <div class="card bg-light mb-3" style="max-width: 20rem;">
-        @*<div class="card-header">Are you sure you want to delete this rental?</div>*@
+        <div class="card-header">Details about the rental</div>
         <div class="card-body">
             <dl class="dl-horizontal">
                 <dt>
