--- a/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Rentals/Delete.cshtml
+++ b/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Rentals/Delete.cshtml
@@ -5,8 +5,6 @@
 }
 
 <h2 class="my-2">Delete</h2>
-
-@*<h3>Are you sure you want to delete this?</h3>*@
 <div>
     <h4>Rental</h4>
     <hr />
@@ -45,7 +43,7 @@
 
     </dl>*@
     <div class="card bg-light mb-3" style="max-width: 22rem;">
-        <div class="card-header">Are you sure you want to delete this rental?</div>
+        <div class="card-header">Rental details</div>
         <div class="card-body">
             <dl class="dl-horizontal">
             <dt>
@@ -88,8 +86,35 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default btn-outline-success" /> |
+            @*<input type="submit" value="Delete" class="btn btn-default btn-outline-success" /> |*@
+              <button class="btn btn-default btn-outline-success" type="button"
+                   data-bs-toggle="modal" data-bs-target="#myModal">Delete</button> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
+</div>
+<div class="modal fade" id="myModal">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Delete</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true"></span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure you want to delete this rental?</p>
+            </div>
+            <div class="modal-footer">
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
+                 <div class="form-actions no-color">
+                    <input type="submit" value="Yes" class="btn btn-default btn-outline-success" />
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+                 </div>
+                }
+            </div>
+        </div>
+    </div>
 </div>
