Styling of Login, Register, Role and Users Views

--- a/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Cars/ReadOnlyListCars.cshtml
+++ b/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Cars/ReadOnlyListCars.cshtml
@@ -6,9 +6,7 @@
 
 <h2 class="my-2">Cars</h2>
 
-
-
-<table id="cars" class="table">
+<table id="cars" class="table table-hover">
     <thead>
         <tr>
             <th>
@@ -28,7 +26,7 @@
             </th>
         </tr>
     </thead>
-    <tbody></tbody>
+    <tbody class="table-light"></tbody>
 </table>
 
 @section scripts
