--- a/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Account/ExternalLoginConfirmation.cshtml
@@ -15,7 +15,7 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <p class="text-info">
         You've successfully authenticated with <strong>@ViewBag.LoginProvider</strong>.
-        Please enter a user name for this site below and click the Register button to finish
+        Please enter your Email below and click the Register button to finish
         logging in.
     </p>
     <div class="form-group">
@@ -27,7 +27,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
+            <input type="submit" class="btn btn-default btn-outline-success my-3" value="Register" />
         </div>
     </div>
 }
