--- a/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Account/Login.cshtml
+++ b/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Account/Login.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Log in";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2 class="my-2">@ViewBag.Title.</h2>
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
@@ -28,24 +28,24 @@
                         @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                     </div>
                 </div>
-                <div class="form-group">
+                @*<div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                         <div class="checkbox">
                             @Html.CheckBoxFor(m => m.RememberMe)
                             @Html.LabelFor(m => m.RememberMe)
                         </div>
                     </div>
-                </div>
+                </div>*@
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" />
+                        <input type="submit" value="Log in" class="btn btn-default btn-outline-success my-3" />
                     </div>
                 </div>
                 <p>
                     @Html.ActionLink("Register as a new user", "Register")
                 </p>
             }
-            <div class="form-group">
+            <div class="form-group mt-5">
                 <section id="socialLoginForm">
                     @Html.Partial("_ExternalLoginsListPartial",
                    new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
