--- a/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Account/Register.cshtml
+++ b/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Account/Register.cshtml
@@ -3,9 +3,9 @@
     ViewBag.Title = "Register";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2 class="my-2">@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal col-md-8", role = "form" }))
 {
     @Html.AntiForgeryToken()
     <h4>Create a new account.</h4>
@@ -37,13 +37,13 @@
     </div>
     <div class="form-group">
         @Html.Label("User Role", new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.DropDownList("UserRoles", (SelectList)ViewBag.Name, "-Select-")
+        <div class="col-md-3">
+            @Html.DropDownList("UserRoles", (SelectList)ViewBag.Name, "-Select-", new { @class = "form-select" })
         </div>
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
+            <input type="submit" class="btn btn-default btn-outline-success my-3" value="Register" />
         </div>
     </div>
 }
