--- a/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Customers/ReadOnlyListCustomers.cshtml
+++ b/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Customers/ReadOnlyListCustomers.cshtml
@@ -6,7 +6,7 @@
 
 <h2 class="my-2">Customers</h2>
 
-<table id="customers" class="table">
+<table id="customers" class="table table-hover">
     <thead>
         <tr>
             <th>
@@ -17,7 +17,7 @@
             </th>
         </tr>
     </thead>
-    <tbody></tbody>
+    <tbody class="table-light"></tbody>
 </table>
 
 @section scripts
