--- a/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Rentals/Create.cshtml
+++ b/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Rentals/Create.cshtml
@@ -39,14 +39,14 @@
     <div class="form-group">
         @Html.LabelFor(model => model.CarId, "Car Manufacturer", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownList("CarId", null, htmlAttributes: new { @class = "form-control" })
+            @Html.DropDownList("CarId", null, "-Select-", htmlAttributes: new { @class = "form-select" })
             @Html.ValidationMessageFor(model => model.CarId, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
         @Html.LabelFor(model => model.CustomerId, "Customer's Name", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownList("CustomerId", null, htmlAttributes: new { @class = "form-control" })
+            @Html.DropDownList("CustomerId", null, "-Select-", htmlAttributes: new { @class = "form-select" })
             @Html.ValidationMessageFor(model => model.CustomerId, "", new { @class = "text-danger" })
         </div>
     </div>
