--- a/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Rentals/ReadOnlyListRentals.cshtml
+++ b/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Rentals/ReadOnlyListRentals.cshtml
@@ -6,7 +6,7 @@
 
 <h2 class="my-2">Rentals</h2>
 
-<table id="rentals" class="table">
+<table id="rentals" class="table table-hover">
     <thead>
         <tr>
             <th>
@@ -23,7 +23,7 @@
             </th>
         </tr>
     </thead>
-    <tbody></tbody>
+    <tbody class="table-light"></tbody>
 </table>
 
 @section scripts
