--- a/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Shared/_Layout.cshtml
+++ b/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link href="~/Content/myBootstrap.css" rel="stylesheet" />
     <script src="~/Scripts/moment.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="~/Content/favicon.ico">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
@@ -36,8 +37,8 @@
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <input class="form-control me-sm-2" type="search" placeholder="Search">
-                    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+                    <input class="form-control me-2" type="search" placeholder="Search">
+                    <button class="btn btn-secondary me-4" type="submit">Search</button>
                 </form>
                 @*<ul class="navbar-nav d-flex justify-content-end">
                         <li class="nav-item">
