--- a/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Shared/_LoginPartial.cshtml
+++ b/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Shared/_LoginPartial.cshtml
@@ -6,18 +6,20 @@
         @Html.AntiForgeryToken()
 
         <ul class="nav navbar-nav navbar-right">
-            <li>
-                @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+            <li class="nav-item ms-md-3 ms-lg-3">
+                @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", style = "text-decoration:none;" })
             </li>
-            <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+            <li class="nav-item ms-md-3 ms-lg-3">
+                <a style = "text-decoration:none;" href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
+            </li>
         </ul>
     }
 }
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink", @class="nav-item me-3" })</li>
-        <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink", @class = "nav-item me-3" })</li>
+        <li class="nav-item ms-md-3 ms-lg-3">@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink", style = "text-decoration:none;" })</li>
+        <li class="nav-item ms-md-3 ms-lg-3">@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink", style = "text-decoration:none;" })</li>
     </ul>
 }
 
