--- a/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Users/Index.cshtml
+++ b/ZavrsnaAplikacija/ZavrsnaAplikacija/Views/Users/Index.cshtml
@@ -5,14 +5,14 @@
 
 @if (ViewBag.displayMenu == "Yes")
 {
-    <h1>Welcome Admin. Now you can create user Role.</h1>
-    <h3>
+    <h2 class="my-2">Welcome Admin. Now you can create user Role.</h2>
+    <h4>
         @Html.ActionLink("Manage Roles", "Index", "Role")
-    </h3>
+    </h4>
 }
 else
 {
-    <h2>Welcome <strong>@ViewBag.Name</strong>!</h2>
+    <h2 class="my-2">Welcome <strong>@ViewBag.Name</strong>!</h2>
 }
 
 
